# WarpStash

./: Cargo.toml  README.md
assets/: default_config.toml
crates/warpstash-common/: Cargo.toml
crates/warpstash-common/src/: config.rs  db.rs  types.rs
crates/warpstash-ui/: Cargo.toml
crates/warpstash-ui/src/: app.rs  clipboard.rs  main.rs  theme.rs
crates/warpstashd/: Cargo.toml
crates/warpstashd/src/: dedup.rs  main.rs  wayland.rs
