[package]
name = "warpstash-common"
description = "Shared library for WarpStash — config, database, and types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
