[package]
name = "warpstashd"
description = "WarpStash clipboard daemon — watches Wayland clipboard and persists entries"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "warpstashd"
path = "src/main.rs"

[dependencies]
warpstash-common = { path = "../warpstash-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }
wayland-protocols = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
libc = "0.2"
